# yak-1

./: CMakeLists.txt  YakLib.vcxproj  YakLib.vcxproj.filters
yak/include/yak/: yak_server.h
yak/include/yak/kfusion/: half.hpp  internal.hpp  kinfu.hpp  precomp.hpp  safe_call.hpp  tsdf_container.h  types.hpp
yak/include/yak/kfusion/cuda/: device.hpp  device_array.hpp  device_memory.hpp  imgproc.hpp  kernel_containers.hpp  projective_icp.hpp  temp_utils.hpp  texture_binder.hpp  tsdf_volume.hpp
yak/include/yak/mc/: marching_cubes.h  marching_cubes_tables.h
yak/src/: yak_server.cpp
yak/src/cuda/: tsdf_volume.cu
yak/src/kfusion/: core.cpp  device_memory.cpp  imgproc.cpp  kinfu.cpp  precomp.cpp  projective_icp.cpp  tsdf_container.cpp  tsdf_volume.cpp
yak/src/mc/: marching_cubes.cpp  marching_cubes_tables.cpp  marching_cubes_tables.h  marching_cubes_tests.cpp
yak/src/test/: tsdf_tests.cpp
